@@ -10,6 +10,7 @@ v 2.0.0
 - Extended the "exp" and "expUp" functions
 - Functions "explode" and "explodeUp" hidden in interface (but still working)
 - Better output for many functions (...)
+- Keep screen on while using the app
 - Fix: Glith opening a context menu with single click
 - Fix: Error on expression like "3*-4"
 - Fix: Dice pools with large number of rolls
